# dns

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  go.mod  go.sum  main.go
.github/workflows/: cd.yaml  ci.yaml
cmd/: BUILD.bazel  server.go
cmd/config/: BUILD.bazel
cmd/flags/: BUILD.bazel  flags.go  fs.go  os.go
dns/: BUILD.bazel  dns_with_trace.go  repository.go  unimplemented.go
dns/core/: BUILD.bazel  core.go  dns.go  dns_test.go
examples/core_jsonfile/: BUILD.bazel  main.go
examples/core_memmap/: BUILD.bazel  main.go
examples/core_yamlfile/: BUILD.bazel  main.go
factory/: BUILD.bazel  dns.go  factory.go  health.go  logger.go  server.go  service.go  store.go
health/: BUILD.bazel  health_with_trace.go  repository.go
health/simplehealth/: BUILD.bazel  simple.go  simple_test.go
service/: BUILD.bazel  dns.go  dns_with_logger.go  dns_with_trace.go  health.go  health_with_logger.go  health_with_trace.go  service.go  store.go  store_with_logger.go  store_with_trace.go
service/e2e/: dns_test.go  health_test.go  service_test.go  store_test.go
service/middleware/logger/: BUILD.bazel  logger.go
store/: BUILD.bazel  repository.go  store_with_trace.go  unimplemented.go
store/encoder/: BUILD.bazel
store/file/: BUILD.bazel  file.go  file_test.go  helper.go  store.go  store_test.go
store/memmap/: BUILD.bazel  memmap.go  store.go  store_test.go
transport/e2e/: BUILD.bazel  transport_test.go
transport/httpapi/: BUILD.bazel  api.go  response.go  server.go
transport/httpapi/endpoints/: BUILD.bazel  context.go  dns.go  endpoints.go  health.go  helper.go  response.go  store.go
transport/udp/: BUILD.bazel  server.go  udp_with_trace.go
transport/udp/miekgdns/: BUILD.bazel  context.go  dns.go  handler.go  helper.go  server.go
util/golangci-lint/: def.bzl  deps.bzl
