load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dns",
    srcs = [
        "dns_with_trace.go",
        "repository.go",
        "unimplemented.go",
    ],
    importpath = "github.com/zalgonoise/dns/dns",
    visibility = ["//visibility:public"],
    deps = [
        "//store",
        "@com_github_miekg_dns//:dns",
        "@com_github_zalgonoise_attr//:go_default_library",
        "@com_github_zalgonoise_x_spanner//:spanner",
    ],
)
