load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "factory",
    srcs = [
        "dns.go",
        "factory.go",
        "health.go",
        "logger.go",
        "server.go",
        "store.go",
    ],
    importpath = "github.com/zalgonoise/dns/factory",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/config",
        "//dns",
        "//dns/core",
        "//health",
        "//health/simplehealth",
        "//service",
        "//store",
        "//store/file",
        "//store/memmap",
        "//transport/httpapi",
        "//transport/httpapi/endpoints",
        "//transport/udp",
        "//transport/udp/miekgdns",
        "@com_github_zalgonoise_attr//:go_default_library",
        "@com_github_zalgonoise_logx//:logx",
        "@com_github_zalgonoise_logx//handlers",
        "@com_github_zalgonoise_logx//handlers/jsonh",
        "@com_github_zalgonoise_logx//handlers/texth",
        "@com_github_zalgonoise_x_spanner//:spanner",
        "@com_github_zalgonoise_x_spanner//export",
    ],
)
