load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "health",
    srcs = [
        "health_with_trace.go",
        "report.go",
        "repository.go",
    ],
    importpath = "github.com/zalgonoise/dns/health",
    visibility = ["//visibility:public"],
    deps = [
        "//store",
        "@com_github_zalgonoise_attr//:attr",
        "@com_github_zalgonoise_spanner//:spanner",
    ],
)
