load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "dns.go",
        "dns_with_logger.go",
        "dns_with_trace.go",
        "health.go",
        "health_with_logger.go",
        "health_with_trace.go",
        "service.go",
        "store.go",
        "store_with_logger.go",
        "store_with_trace.go",
    ],
    importpath = "github.com/zalgonoise/dns/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/config",
        "//dns",
        "//health",
        "//health/simplehealth",
        "//store",
        "@com_github_miekg_dns//:dns",
        "@com_github_zalgonoise_attr//:attr",
        "@com_github_zalgonoise_logx//:logx",
        "@com_github_zalgonoise_spanner//:spanner",
    ],
)
