load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = [
        "error.go",
        "filemode.go",
        "record.go",
        "repository.go",
        "store_with_trace.go",
        "unimplemented.go",
    ],
    importpath = "github.com/zalgonoise/dns/store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_zalgonoise_logx//attr",
        "@com_github_zalgonoise_x_spanner//:spanner",
    ],
)
