load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "core_jsonfile_lib",
    srcs = ["main.go"],
    importpath = "github.com/zalgonoise/dns/examples/core_jsonfile",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/config",
        "//factory",
        "@com_github_zalgonoise_attr//:attr",
        "@com_github_zalgonoise_spanner//:spanner",
    ],
)

go_binary(
    name = "core_jsonfile",
    embed = [":core_jsonfile_lib"],
    visibility = ["//visibility:public"],
)
