load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpapi",
    srcs = [
        "api.go",
        "nilwriter.go",
        "response.go",
        "server.go",
    ],
    importpath = "github.com/zalgonoise/dns/transport/httpapi",
    visibility = ["//visibility:public"],
)
