load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpapi",
    srcs = [
        "api.go",
        "nilwriter.go",
        "server.go",
    ],
    importpath = "github.com/zalgonoise/dns/transport/httpapi",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_zalgonoise_attr//:go_default_library",
        "@com_github_zalgonoise_x_spanner//:spanner",
    ],
)
