load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "udp",
    srcs = [
        "dns.go",
        "server.go",
        "udp_with_trace.go",
    ],
    importpath = "github.com/zalgonoise/dns/transport/udp",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_zalgonoise_logx//attr",
        "@com_github_zalgonoise_x_spanner//:go_default_library",
    ],
)
