load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "endpoints",
    srcs = [
        "context.go",
        "dns.go",
        "endpoints.go",
        "health.go",
        "response.go",
        "store.go",
    ],
    importpath = "github.com/zalgonoise/dns/transport/httpapi/endpoints",
    visibility = ["//visibility:public"],
    deps = [
        "//service",
        "//store",
        "//store/encoder",
        "//transport/httpapi",
        "//transport/udp",
        "@com_github_google_uuid//:uuid",
        "@com_github_zalgonoise_logx//:logx",
        "@com_github_zalgonoise_logx//attr",
        "@com_github_zalgonoise_x_ptr//:go_default_library",
        "@com_github_zalgonoise_x_spanner//:go_default_library",
    ],
)
