load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "miekgdns",
    srcs = [
        "context.go",
        "dns.go",
        "handler.go",
        "server.go",
    ],
    importpath = "github.com/zalgonoise/dns/transport/udp/miekgdns",
    visibility = ["//visibility:public"],
    deps = [
        "//service",
        "//store",
        "//transport/udp",
        "@com_github_google_uuid//:uuid",
        "@com_github_miekg_dns//:dns",
        "@com_github_zalgonoise_attr//:go_default_library",
        "@com_github_zalgonoise_x_spanner//:spanner",
    ],
)
